penambahan js utk open search box

--- a/AnimeSesshu.Html
+++ b/AnimeSesshu.Html
@@ -20,19 +20,19 @@
                         ANIME SESSHU
                     </div>
                 </div>
-                <div class="Layout-Search">
+                <div class="Layout-Search" id="searchInputDiv">
                     <div class="Layout-Icon-Back">
                         <i class="fa fa-arrow-left Icon-Back"></i>
                     </div>
-                    <div class="Search-Menu">  
+                    <div class="Search-Menu">
                         <input type="text" name="search" placeholder="Search Anime" class="Search-Input">
                     </div>
                 </div>
-                
-                <div class="Layout-Icon-Search">
+
+                <div class="Layout-Icon-Search" onclick="searchTransition()">
                     <i class="fa fa-search Icon-Search"></i>
                 </div>
-            </div> 
+            </div>
         </header>
         <script src="HomePage.Js"></script>
     </body>
