--- a/HTML/AnimeSesshu.Html
+++ b/HTML/AnimeSesshu.Html
@@ -6,21 +6,20 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
         <link rel="stylesheet" href="../CSS/HomePage.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <header>
             <div class="Template-Header">
-                <div class="Menu-Btn" id="Menu-Hamburger" onclick="CloseTransition()">
+                <div class="Menu-Btn" id="Menu-Hamburger" onclick="CloseTransition(), slideTransition()">
                     <div class="Hamburger-Btn">
                     </div>
                 </div>
                 <div class="Layout-Logo">
-                    <div class="Logo">
                         <a href="AnimeSesshu.Html"><img src="../Gambar/Logo.png" alt="LogoAnimeSesshu" class="Logo-Gambar"></a>
-                    </div>
                 </div>
                 <div class="Layout-Search" id="searchInputDiv">
                     <div class="Layout-Icon-Back" onclick="searchClose()">
@@ -40,7 +39,7 @@
             </div>
         </header>
 
-        <section class="Sidebar">
+        <section class="Sidebar" id= "slidebar">
             <div class="Layout-Slidebar">
                 <!-- Halaman 1-->
                 <div class="Layout-Halaman Space-Halaman">
